syntax = "proto3";

package stats.message;

import "google/protobuf/timestamp.proto";

option java_package = "ru.practicum.ewm.stats.proto";
option java_multiple_files = true;

message UserActionProto {
  int64 user_id = 1;
  int64 event_id = 2;
  ActionTypeProto action_type = 3;
  google.protobuf.Timestamp timestamp = 4;
}

enum ActionTypeProto {
  ACTION_VIEW = 0;     // Просмотр мероприятия
  ACTION_REGISTER = 1; // Регистрация на мероприятие
  ACTION_LIKE = 2;     // Лайк мероприятия
}